# obamify-web

./: README.md  obamify.py  pyproject.toml  requirements.txt  server.py
static/: style.css
templates/: index.html
