[tool.poetry]
name = "obamify-web"
version = "0.1.0"
description = "Real-time Obamify Web"
authors = ["Mason Wyatt masonewyatt1@gmail.com"]

[tool.poetry.dependencies]
python = "^3.13"
flask = "^3.1.2"
flask-socketio = "^6.2.2"
eventlet = "^0.34.1"
opencv-python = "^4.12.0"
numpy = "^2.2.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
